GitHub toegevoegd aan package.json

--- a/package.json
+++ b/package.json
@@ -17,5 +17,13 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/lisannevvliet/progressive-web-apps-2122.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lisannevvliet/progressive-web-apps-2122/issues"
+  },
+  "homepage": "https://github.com/lisannevvliet/progressive-web-apps-2122#readme"
 }
