--- a/package.json
+++ b/package.json
@@ -5,19 +5,27 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon main.js"
+    "start": "nodemon main.js",
+    "build": "npm-run-all build:*",
+    "build:css": "cleancss -o static/styles/style.css source/styles/style.css",
+    "build:js": "node-minify --compressor uglify-js --input 'source/scripts/script.js' --output 'static/scripts/script.js'"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "compression": "^1.7.4",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "node-fetch": "^3.2.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.15"
+    "@node-minify/cli": "^6.2.0",
+    "@node-minify/uglify-js": "^6.2.0",
+    "clean-css-cli": "^5.6.0",
+    "compression": "^1.7.4",
+    "nodemon": "^2.0.15",
+    "npm-run-all": "^4.1.5"
   },
   "repository": {
     "type": "git",
