devDependencies omgezet in dependencies voor Heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "build": "npm-run-all build:*",
     "build:styles": "node-minify --compressor terser --input \"source/scripts/script.js\" --output \"static/scripts/script.js\"",
     "build:scripts": "node-minify --compressor clean-css --input \"source/styles/style.css\" --output \"static/styles/style.css\""
@@ -15,15 +15,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
-    "node-fetch": "^3.2.3"
-  },
-  "devDependencies": {
     "@node-minify/clean-css": "^6.2.0",
     "@node-minify/cli": "^6.2.0",
     "@node-minify/terser": "^6.2.0",
     "compression": "^1.7.4",
+    "ejs": "^3.1.6",
+    "express": "^4.17.3",
+    "node-fetch": "^3.2.3",
     "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5"
   },
