--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@node-minify/cli": "^6.2.0",
     "@node-minify/terser": "^6.2.0",
     "compression": "^1.7.4",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "node-fetch": "^3.2.3",
