--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "prestart": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js",
+    "start": "nodemon main.js",
     "build": "npm-run-all build:*",
     "build:styles": "node-minify --compressor terser --input \"source/scripts/script.js\" --output \"static/scripts/script.js\"",
     "build:scripts": "node-minify --compressor clean-css --input \"source/styles/style.css\" --output \"static/styles/style.css\""
