--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "node-fetch": "^3.2.3",
-    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5"
   },
   "repository": {
@@ -33,5 +32,8 @@
   "bugs": {
     "url": "https://github.com/lisannevvliet/ethical-food-checker-pwa/issues"
   },
-  "homepage": "https://github.com/lisannevvliet/ethical-food-checker-pwa#readme"
+  "homepage": "https://github.com/lisannevvliet/ethical-food-checker-pwa#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
