--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "main.js",
   "scripts": {
     "prestart": "npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "nodemon main.js",
     "start": "node main.js",
     "build": "npm-run-all build:*",
     "build:styles": "node-minify --compressor terser --input \"source/scripts/script.js\" --output \"static/scripts/script.js\"",
